kube/ip-front/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-frontend-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ip-frontend
