kube/ip-front/front-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-vs
spec:
  hosts:
    - testapp.mdiservices.ru
  gateways:
    - ip-ingress-gateway
  http:
    - match:
      - uri:
          exact: /
      - uri:
          exact: /callback
      - uri:
          prefix: /static
      - uri:
          regex: '^.*\.(ico|png|jpg)$'
      route:
      - destination:
          host: ip-frontend-svc
          port:
            number: 80
